2 primeras funciones de filtrado y cambiamos input checkbox por radio

--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
                         
                         <div class="filter-options" id="filter-options">
                             <div class="filter-option">
-                                <input type="checkbox" id="filter-1" name="filter" value="option1">
+                                <input type="radio" id="filter-1" name="filter" value="option1">
                                 <label for="filter-1" class="filters">Todas</label>
                             </div>
                             <div class="filter-option">
-                                <input type="checkbox" id="filter-2" name="filter" value="option2">
+                                <input type="radio" id="filter-2" name="filter" value="option2">
                                 <label for="filter-2" class="filters">Pendientes</label>
                             </div>
                             <div class="filter-option">
-                                <input type="checkbox" id="filter-3" name="filter" value="option3">
+                                <input type="radio" id="filter-3" name="filter" value="option3">
                                 <label for="filter-3" class="filters">Por vencer</label>
                             </div>
                             <div class="filter-option">
-                                <input type="checkbox" id="filter-4" name="filter" value="option4">
+                                <input type="radio" id="filter-4" name="filter" value="option4">
                                 <label for="filter-4" class="filters">Vencidas</label>
                             </div>
                             <div class="filter-option">
-                                <input type="checkbox" id="filter-5" name="filter" value="option5">
+                                <input type="radio" id="filter-5" name="filter" value="option5">
                                 <label for="filter-5" class="filters">Completadas</label>
                             </div>
                             <div class="filter-option">
-                                <input type="checkbox" id="filter-6" name="filter" value="option6">
+                                <input type="radio" id="filter-6" name="filter" value="option6">
                                 <label for="filter-6" class="filters">Ordenar</label>
                             </div>
                         </div>
